added   math methon

--- a/test4.ipynb
+++ b/test4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "bbd24406",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "ae22cf5c",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "87e2358d",
    "metadata": {},
    "outputs": [
@@ -50,10 +50,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HELLO WORLD\n",
-      "hello world\n",
-      "Hello World\n",
-      "Hello world\n"
+      "power 100.0\n",
+      "trigonomatric 1.0\n",
+      "trigonomatric 6.123233995736766e-17\n",
+      "trigonomatric 0.9999999999999999\n"
      ]
     }
    ],
@@ -425,14 +425,14 @@
     "\n",
     "# power\n",
     "#\n",
-    "# import math\n",
-    "# print('power', math.pow(10,2))\n",
+    "import math\n",
+    "print('power', math.pow(10,2))\n",
     "\n",
     "\n",
-    "#\n",
-    "# print('trigonomatric', math.sin(math.radians(90)))\n",
-    "# print('trigonomatric', math.cos(math.radians(90)))\n",
-    "# print('trigonomatric', math.tan(math.radians(45)))\n",
+    "\n",
+    "print('trigonomatric', math.sin(math.radians(90)))\n",
+    "print('trigonomatric', math.cos(math.radians(90)))\n",
+    "print('trigonomatric', math.tan(math.radians(45)))\n",
     "\n",
     "\n",
     "# print('logarithmic' , math.log(10) )\n",
@@ -465,11 +465,11 @@
     "\n",
     "\n",
     "\n",
-    "text=\"Hello World\"\n",
-    "print(text.upper())\n",
-    "print(text.lower())\n",
-    "print(text.title())\n",
-    "print(text.capitalize())\n"
+    "# text=\"Hello World\"\n",
+    "# print(text.upper())\n",
+    "# print(text.lower())\n",
+    "# print(text.title())\n",
+    "# print(text.capitalize())\n"
    ]
   }
  ],
