--- a/test5.ipynb
+++ b/test5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "id": "fcbefe38",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "id": "fc45ddfb",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 49,
    "id": "c1504337",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
+   "id": "ba4fb8b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ul islam\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "text='shofiul islam'\n",
+    "print(text[5:])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "ee2ffb0d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shofikul islam  jamalpur\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "x='shofikul '\n",
+    "y=\"islam \" \n",
+    "z=''' jamalpur'''\n",
+    "print(x+y+z)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "350e960f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shofikul ~    islam \n"
+     ]
+    }
+   ],
+   "source": [
+    "string1='shofikul   '\n",
+    "string2='islam '\n",
+    "combined=string1+string2\n",
+    "print(combined)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "88b0ba4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello world\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "string1='hello'\n",
+    "string2='world'\n",
+    "\n",
+    "combined=string1+ ' ' +string2\n",
+    "print(combined)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "id": "d3aba9e5",
    "metadata": {},
    "outputs": [
@@ -89,7 +176,7 @@
        "' string   ar  akta  value ke \\n  onno value  diye change kora jaina \\n  tai error asbe '"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 55,
    "id": "5239682e",
    "metadata": {},
    "outputs": [
@@ -140,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 56,
    "id": "56ce42e6",
    "metadata": {},
    "outputs": [
@@ -171,6 +258,49 @@
     "print(\"Division:\",a/b)\n",
     "print(\"Modulus:\",a%b)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "37a61a33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# string repeatation\n",
+    "\n",
+    "text='shofikul  '\n",
+    "\n",
+    "many=text*10\n",
+    "print(many)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "7da55272",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  \n"
+     ]
+    }
+   ],
+   "source": [
+    "text='shofikul  '\n",
+    "repeat=text*20\n",
+    "print(repeat)"
    ]
   }
  ],
