added   python oop

--- a/test5.ipynb
+++ b/test5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "id": "fcbefe38",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "id": "fc45ddfb",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "id": "c1504337",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
+   "id": "d21dc4de",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "ba4fb8b9",
    "metadata": {},
    "outputs": [
@@ -99,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "id": "ee2ffb0d",
    "metadata": {},
    "outputs": [
@@ -121,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "350e960f",
    "metadata": {},
    "outputs": [
@@ -129,7 +137,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shofikul ~    islam \n"
+      "shofikul   islam \n"
      ]
     }
    ],
@@ -142,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 23,
    "id": "88b0ba4a",
    "metadata": {},
    "outputs": [
@@ -166,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 24,
    "id": "d3aba9e5",
    "metadata": {},
    "outputs": [
@@ -176,7 +184,7 @@
        "' string   ar  akta  value ke \\n  onno value  diye change kora jaina \\n  tai error asbe '"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 25,
    "id": "5239682e",
    "metadata": {},
    "outputs": [
@@ -227,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 26,
    "id": "56ce42e6",
    "metadata": {},
    "outputs": [
@@ -262,7 +270,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 27,
+   "id": "498c1741",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import turtle\n",
+    "# tom=turtle.Turtle()\n",
+    "# print(tom.circle(100))\n",
+    "# print(tom)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "37a61a33",
    "metadata": {},
    "outputs": [
@@ -285,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 29,
    "id": "7da55272",
    "metadata": {},
    "outputs": [
@@ -293,14 +314,132 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  \n"
+      "shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  shofikul  \n"
      ]
     }
    ],
    "source": [
     "text='shofikul  '\n",
-    "repeat=text*20\n",
+    "repeat=text*10\n",
     "print(repeat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "2edb68af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "class Myclss:          #  clss   er    nam ta  capital letter  a   ditye  hoy \n",
+    "    x=10\n",
+    "    y=30\n",
+    "    z=40\n",
+    "    sum=x+y+z\n",
+    "\n",
+    "\n",
+    "obj1=Myclss()                #aitake object bola  hoy\n",
+    "print(obj1.x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ec8f9e77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "class Myclss:          #  clss   er    nam ta  capital letter  a   ditye  hoy \n",
+    "    x=10\n",
+    "    y=30\n",
+    "    z=40\n",
+    "    sum=x+y+z\n",
+    "\n",
+    "\n",
+    "obj1=Myclss()                #aitake object bola  hoy\n",
+    "print(obj1.y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "013e8e4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "class Myclss:          #  clss   er    nam ta  capital letter  a   ditye  hoy \n",
+    "    x=10\n",
+    "    y=30\n",
+    "    z=40\n",
+    "    sum=x+y+z\n",
+    "\n",
+    "\n",
+    "obj1=Myclss()                #aitake object bola  hoy\n",
+    "print(obj1.z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "40b45715",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "30\n",
+      "40\n",
+      "80\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "class Myclss:          #  clss   er    nam ta  capital letter  a   ditye  hoy \n",
+    "    x=10\n",
+    "    y=30\n",
+    "    z=40\n",
+    "    sum=x+y+z\n",
+    "\n",
+    "\n",
+    "obj1=Myclss()                #aitake object bola  hoy\n",
+    "print(obj1.x)\n",
+    "print(obj1.y)\n",
+    "print(obj1.z)\n",
+    "print(obj1.sum)"
    ]
   }
  ],
