added   python oop

--- a/test5.ipynb
+++ b/test5.ipynb
@@ -441,6 +441,59 @@
     "print(obj1.z)\n",
     "print(obj1.sum)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "54bb1211",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "30\n",
+      "40\n",
+      "10\n",
+      "30\n",
+      "40\n",
+      "80\n"
+     ]
+    }
+   ],
+   "source": [
+    "# class\n",
+    "\n",
+    "\n",
+    "class Myclss:          #  clss   er    nam ta  capital letter  a   ditye  hoy\n",
+    "    x=10\n",
+    "    y=30\n",
+    "    z=40\n",
+    "    sum=x+y+z\n",
+    "\n",
+    "\n",
+    "obj1=Myclss()                #aitake object bola  hoy\n",
+    "print(obj1.x)\n",
+    "\n",
+    "\n",
+    "obj2=Myclss()                #aitake object bola  hoy\n",
+    "print(obj1.y)\n",
+    "\n",
+    "\n",
+    "\n",
+    "obj2=Myclss()                #aitake object bola  hoy\n",
+    "print(obj1.z)\n",
+    "\n",
+    "\n",
+    "obj1=Myclss()                #aitake object bola  hoy\n",
+    "print(obj1.x)\n",
+    "print(obj1.y)\n",
+    "print(obj1.z)\n",
+    "print(obj1.sum)\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
