added   python oop

--- a/test5.ipynb
+++ b/test5.ipynb
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "id": "54bb1211",
    "metadata": {},
    "outputs": [
@@ -455,10 +455,10 @@
       "10\n",
       "30\n",
       "40\n",
-      "10\n",
-      "30\n",
-      "40\n",
-      "80\n"
+      "class holo blueprint jar first variable value 10\n",
+      "class holo blueprint jar    Second variable value 30\n",
+      "class holo blueprint  jar   Third variable value 40\n",
+      "class holo blueprint jar   sum  variable value 80\n"
      ]
     }
    ],
@@ -487,12 +487,12 @@
     "\n",
     "\n",
     "obj1=Myclss()                #aitake object bola  hoy\n",
-    "print(obj1.x)\n",
-    "print(obj1.y)\n",
-    "print(obj1.z)\n",
-    "print(obj1.sum)\n",
+    "print('class holo blueprint jar first variable value' , obj1.x)\n",
+    "print('class holo blueprint jar    Second variable value' , obj1.y)\n",
+    "print('class holo blueprint  jar   Third variable value' , obj1.z)\n",
+    "print('class holo blueprint jar   sum  variable value' , obj1.sum)\n",
     "\n",
-    "\n"
+    " \n"
    ]
   }
  ],
