added    oop part

--- a/test5.ipynb
+++ b/test5.ipynb
@@ -494,6 +494,43 @@
     "\n",
     " \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "fbd3f71e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "125\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "class Myclss:          #  clss   er    nam ta  capital letter  a   ditye  hoy\n",
+    "    x=10\n",
+    "    y=20\n",
+    "    #z=100\n",
+    "\n",
+    "    def __init__(self,zValue,xValue):\n",
+    "        self.z=zValue\n",
+    "        self.x=xValue\n",
+    "\n",
+    "    def addTwo(self):\n",
+    "        print(self.x+self.y+self.z)\n",
+    "\n",
+    "\n",
+    "obj =Myclss(100 , 5)\n",
+    "obj.addTwo()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
