added    oop part

--- a/test5.ipynb
+++ b/test5.ipynb
@@ -531,6 +531,42 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "367c0c4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140\n",
+      "71\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Myclss:          #  clss   er    nam ta  capital letter  a   ditye  hoy\n",
+    "    x=10\n",
+    "    y=20\n",
+    "    z=30\n",
+    "\n",
+    "    def addTwo(self,a,b):\n",
+    "        sum=self.x+self.y+self.z+a+b\n",
+    "        print(sum)\n",
+    "\n",
+    "    def addNew(self):\n",
+    "        self.addTwo(5,6)\n",
+    "\n",
+    "\n",
+    "obj =Myclss()\n",
+    "obj.addTwo(30,50)\n",
+    "obj.addNew()\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
