added    oop part

--- a/test5.ipynb
+++ b/test5.ipynb
@@ -567,6 +567,33 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "b254bb5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Myclss:          #  clss   er    nam ta  capital letter  a   ditye  hoy\n",
+    "    x=10\n",
+    "    y=20\n",
+    "    @staticmethod\n",
+    "    def addTwo():\n",
+    "        z=Myclss.x+Myclss.y\n",
+    "        print(z)\n",
+    "Myclss.addTwo()\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
