added    oop part

--- a/test5.ipynb
+++ b/test5.ipynb
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "b254bb5b",
    "metadata": {},
    "outputs": [
@@ -591,6 +591,59 @@
     "        z=Myclss.x+Myclss.y\n",
     "        print(z)\n",
     "Myclss.addTwo()\n",
+    "\n",
+    "\n",
+    "#  static variable \n",
+    "class Myclas:\n",
+    "    x=10\n",
+    "    y=20\n",
+    "    @staticmethod\n",
+    "    def addTwo():\n",
+    "        z=Myclas.x+Myclas.y\n",
+    "        print(z)\n",
+    "print(Myclas.x)\n",
+    "print(Myclas.y)\n",
+    "obj=Myclas()\n",
+    "print(obj.x)\n",
+    "print(obj.y)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "10\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "#  static variable \n",
+    "class Myclas:\n",
+    "    x=10\n",
+    "    y=20\n",
+    "    @staticmethod\n",
+    "    def addTwo():\n",
+    "        z=Myclas.x+Myclas.y\n",
+    "        print(z)\n",
+    "print(Myclas.x)\n",
+    "print(Myclas.y)\n",
+    "obj=Myclas()\n",
+    "print(obj.x)\n",
+    "print(obj.y)\n",
     "\n",
     "\n"
    ]
