added    oop   only static variable

--- a/test5.ipynb
+++ b/test5.ipynb
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -635,10 +635,40 @@
     "class Myclas:\n",
     "    x=10\n",
     "    y=20\n",
-    "    @staticmethod\n",
-    "    def addTwo():\n",
-    "        z=Myclas.x+Myclas.y\n",
-    "        print(z)\n",
+    "   \n",
+    "print(Myclas.x)\n",
+    "print(Myclas.y)\n",
+    "obj=Myclas()\n",
+    "print(obj.x)\n",
+    "print(obj.y)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "87ad04ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "10\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "#  static variable \n",
+    "class Myclas:\n",
+    "    x=10\n",
+    "    y=20\n",
+    "   \n",
     "print(Myclas.x)\n",
     "print(Myclas.y)\n",
     "obj=Myclas()\n",
