added  10 sem compiler design  lab report all code

--- a/test4.ipynb
+++ b/test4.ipynb
@@ -475,10 +475,246 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b14b35e1",
+   "id": "3134327f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "1 C++ Expression Token Counter Using Stringstream   . To count the number of tokens (words/symbols) in a C++ expression using spaces.\n",
+    "\n",
+    "#include <iostream>\n",
+    "#include <string>\n",
+    "#include <sstream>\n",
+    "#include <vector>\n",
+    "using namespace std;\n",
+    "int main() {\n",
+    "    string expression;\n",
+    "    cout << \"Enter a C++ expression: \";\n",
+    "    getline(cin, expression);\n",
+    "\n",
+    "    stringstream ss(expression);\n",
+    "    string token;\n",
+    "    int tokenCount = 0;\n",
+    "\n",
+    "    while (ss >> token) {\n",
+    "        tokenCount++;\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "    cout << \"Number of tokens: \" << tokenCount << endl;\n",
+    "    return 0;\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "2   CPP Expression Token Counter Using Stringstream\n",
+    "\n",
+    "#include <iostream>\n",
+    "#include <string>\n",
+    "#include <sstream>\n",
+    "#include <vector>\n",
+    "using namespace std;\n",
+    "int main() {\n",
+    "    string expression;\n",
+    "    cout << \"Enter a C++ expression: \" << endl;\n",
+    "    getline(cin, expression);\n",
+    "    stringstream ss(expression);\n",
+    "    string token;\n",
+    "    int tokenCount = 0;\n",
+    "    while (ss >> token) {\n",
+    "        tokenCount++;\n",
+    "        //cout << \"Token: \" << token << endl;\n",
+    "    }\n",
+    "    cout << \"Number of tokens: \" << tokenCount << endl;\n",
+    "    return 0;\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "3  CPP  Variable Name Validator\n",
+    "\n",
+    "#include <iostream>\n",
+    "#include <string>\n",
+    "\n",
+    "using namespace std;\n",
+    "\n",
+    "bool isValidVariableName(const string& name) {\n",
+    "    if (name.empty()) {\n",
+    "        return false;\n",
+    "    }\n",
+    "\n",
+    "    char firstChar = name[0];\n",
+    "    if (!( (firstChar >= 'a' && firstChar <= 'z') ||\n",
+    "           (firstChar >= 'A' && firstChar <= 'Z') ||\n",
+    "           firstChar == '_')) {\n",
+    "        return false;\n",
+    "    }\n",
+    "\n",
+    "    for (size_t i = 1; i < name.length(); ++i) {\n",
+    "        char c = name[i];\n",
+    "        if (!((c >= 'a' && c <= 'z') ||\n",
+    "              (c >= 'A' && c <= 'Z') ||\n",
+    "              (c >= '0' && c <= '9') ||\n",
+    "              c == '_')) {\n",
+    "            return false;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    return true;\n",
+    "}\n",
+    "\n",
+    "int main() {\n",
+    "    string variableName;\n",
+    "    cout << \"Enter a variable name to check: \";\n",
+    "    cin >> variableName;\n",
+    "\n",
+    "    if (isValidVariableName(variableName)) {\n",
+    "        cout << \"'\" << variableName << \"' is a valid Cpp variable name.\" << endl;\n",
+    "    } else {\n",
+    "        cout << \"'\" << variableName << \"' is NOT a valid Cpp variable name.\" << endl;\n",
+    "    }\n",
+    "\n",
+    "    return 0;\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "4  #include <iostream>\n",
+    "#include <vector>\n",
+    "#include <string>\n",
+    "#include <cctype>\n",
+    "using namespace std;\n",
+    "int main() {\n",
+    "    string input = \"if x + 10\";\n",
+    "    vector<pair<string, string>> tokens;\n",
+    "\n",
+    "    int i = 0;\n",
+    "\n",
+    "    while (i < input.length()) {\n",
+    "\n",
+    "        if (isspace(input[i])) {\n",
+    "            i++;\n",
+    "            continue;\n",
+    "        }\n",
+    "\n",
+    "       if (isalpha(input[i])) {\n",
+    "            string value = \"\";\n",
+    "            while (i < input.length() && isalpha(input[i])) {\n",
+    "                value += input[i];\n",
+    "                i++;\n",
+    "            }\n",
+    "\n",
+    "            if (value == \"if\") {\n",
+    "                tokens.push_back({\"KEYWORD\", value});\n",
+    "            } else {\n",
+    "                tokens.push_back({\"IDENTIFIER\", value});\n",
+    "            }\n",
+    "            continue;\n",
+    "        }\n",
+    "\n",
+    "        if (isdigit(input[i])) {\n",
+    "            string value = \"\";\n",
+    "            while (i < input.length() && isdigit(input[i])) {\n",
+    "                value += input[i];\n",
+    "                i++;\n",
+    "            }\n",
+    "            tokens.push_back({\"INTEGER\", value});\n",
+    "            continue;\n",
+    "        }\n",
+    "\n",
+    "        if (input[i] == '+' || input[i] == '-' || input[i] == '*' || input[i] == '/') {\n",
+    "            string value = string(1, input[i]);\n",
+    "            tokens.push_back({\"OPERATOR\", value});\n",
+    "            i++;\n",
+    "            continue;\n",
+    "        }\n",
+    "        string value = string(1, input[i]);\n",
+    "        tokens.push_back({\"INVALID\", value});\n",
+    "        i++;\n",
+    "    }\n",
+    "\n",
+    "    for (const auto& token : tokens) {\n",
+    "        cout << \"Type: \" << token.first << \", Value: \" << token.second << endl;\n",
+    "    }\n",
+    "\n",
+    "    return 0;\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "5  //C++ Program to Recognize Strings Matching the Pattern a*b+ Using a Simple Finite State Automaton\n",
+    "\n",
+    "#include<bits/stdc++.h>\n",
+    "using namespace std;\n",
+    "    int main() {\n",
+    "    int state=0,i,len;\n",
+    "\tstring s;\n",
+    "\tcout << \"Enter a String: \";\n",
+    "\tcin >> s;\n",
+    "\tlen=s.size();\n",
+    "\tfor(i=0; i<len; i++)\n",
+    "    {\n",
+    "\t\tif(state==0 &&s[i]=='a')\n",
+    "        {\n",
+    "            state=0;\n",
+    "        }\n",
+    "        else if(state==0||state==1 &&s[i]=='b')\n",
+    "        {\n",
+    "           state=1;\n",
+    "        }\n",
+    "        else if(state==1&&s[i]=='a')\n",
+    "           {\n",
+    "            state=2;\n",
+    "            break;\n",
+    "           }\n",
+    "        else if(s[i]!= 'a'|| s[i]!='b')\n",
+    "        {\n",
+    "            state=2;\n",
+    "            break;\n",
+    "        }\n",
+    "\n",
+    "    }\n",
+    "    if(state==1)\n",
+    "        {cout<<\"'\"<<s<<\"'is accepted under rule 'a*b+'\"<<endl;}\n",
+    "    else\n",
+    "        {cout<<\"'\"<<s<<\"'is not recognized.\"<<endl;}\n",
+    "\treturn 0;\n",
+    "}\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
